Kubernetes/onenode-cas/ehcos-cas-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ehcos-cas-svc
  labels:
    #suite: ehcos
    app: cas
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: cas
