Kubernetes/onenode-cas/ehcos-cas-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ehcos-cas-ingress
  labels:
    #suite: ehcos
    app: cas-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  backend:
    serviceName: ehcos-cas-svc
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /cas
        backend:
          serviceName: ehcos-cas-svc
          servicePort: 80
